# skinware

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.common  Makefile.generate  Makefile.install  README  README.INSTALL  README.LICENSE  README.RELEASE  README.RTAI  README.STYLE  README.md  configure.ac  index.html  params.json  tasks
apps/: Makefile.am
apps/calibrator/: .gitignore  Kbuild.in  Makefile.am  calib.c  calib_internal.h  main.c  skin_calibrator.h
apps/motion/: .gitignore  Makefile.am  main.cpp  skin_motion.h
apps/tools/: Makefile.am  amplifier.cpp  amplifier.h  filter.cpp  filter.h  scaler.cpp  scaler.h
apps/view/: Makefile.am  main.cpp  vecmath.h
apps/view/gl/: Makefile.am
apps/view/gl/Ngin/: Makefile.am  Ngin.cpp  Ngin.h  Ngin_base.h  Ngin_frustum.h  Ngin_light.cpp  Ngin_primitives.cpp  Ngin_texture.cpp  Ngin_texture.h  shmacros.h
apps/view/gl/Ngin3d/: Makefile.am  Ngin3d.cpp  Ngin3d.h  Ngin3d_actions.cpp  shmacros.h
apps/view/gl/shFont/: Makefile.am  shfont.cpp  shfont.h  shmacros.h
apps/view/gl/shImage/: Makefile.am  shBMP.cpp  shBMP.h
apps/view/gui/: Makefile.am  font.shf
apps/view/settings/: Makefile.am  Ngin3d_settings
doc/: Makefile  Makefile.am  MeanPressureonSkin  Skin  SkinCallback  SkinDriver  SkinDriverAttr  SkinDriverCallbacks  SkinDriverDetails  SkinHook  SkinModule  SkinPatch  SkinReader  SkinReaderAttr  SkinReaderCallbacks  SkinReaderStatistics  SkinSensor  SkinSensorType  SkinUser  SkinUserAttr  SkinUserCallbacks  SkinWriter  SkinWriterAttr  SkinWriterCallbacks  SkinWriterStatistics  constants  globals  index  skin  skin_callback  skin_driver  skin_driver_attr  skin_driver_callbacks  skin_driver_details  skin_hook  skin_module  skin_patch  skin_reader  skin_reader_attr  skin_reader_callbacks  (+10 more)
doc/DocThis/: Makefile  Makefile.common  Makefile.config  Makefile.install  install.bat  style.css
doc/DocThis/grammar/: grammar.in  keywords.in  letters.in  tokens.in
doc/DocThis/src/: Makefile  error_print.cpp  error_print.h  main.cpp  originals.cpp  originals.h  semantics.cpp  semantics.h  specials.cpp  specials.h
doc/api/: Makefile
doc/api/src/: CalibrationCache  MeanPressureonSkin  NamingConvention  RegionalizationCache  constants  globals  index  notices  skin_X_iterator  skin_callbacks  skin_module  skin_object  skin_patch  skin_reader  skin_region  skin_rt  skin_sensor  skin_sensor_type  skin_service  skin_service_manager  skin_sub_region  skin_task_statistics
doc/driver-api/: Makefile
doc/driver-api/src/: Callbacks  DataTypes  Template  constants  globals  index  skin_rt  skink_device  skink_module  skink_patch  skink_registration_data  skink_sensor  skink_sensor_layer
doc/general/: Makefile
doc/general/src/: Makefile  index
doc/service-api/: Makefile
doc/service-api/src/: Callbacks  DataTypes  ServiceFunctions  ServiceManager  Template  constants  globals  index  skin_rt  skink_data_structures  skink_module  skink_patch  skink_region  skink_sensor  skink_sensor_layer  skink_service  skink_sub_region
doc/shCompiler/: Makefile
doc/shCompiler/include/: dfa.h  klist.h  lexer.h  nfa.h  nfa2dfa.h  parser.h  shcompiler.h
doc/shCompiler/src/: Makefile  dfa.cpp  grammar.cpp  grammar.h  lexer.cpp  llparser.cpp  lrparser.cpp  nfa.cpp  nfa2dfa.cpp  nonstd.h  parser.cpp  tokens.cpp  tokens.h
kconfig/: Kconfig  Makefile  conf.c  confdata.c  gconf.c  gconf.glade  mconf.c  qconf.cc  symbol.c
kernel-module/: ChangeLog  Kbuild  Makefile  build.txt  increase_build.c  skink.h  skink_common.h  skink_devices.c  skink_devices.h  skink_devices_internal.h  skink_internal.h  skink_main.c  skink_module.h  skink_patch.h  skink_region.h  skink_rt.h  skink_sensor.h  skink_sensor_layer.h  skink_services.c  skink_services.h  skink_services_internal.h  skink_shared_memory_ids.h  skink_sub_region.h  skink_sysfs.c  skink_sysfs.h  skink_writer.c  skink_writer_internal.h  tasks
pyskin/: Makefile.am  skin.py.in
skin/: Makefile.am
skin++/: Makefile.am
skin++/include/: Makefile.am  skin.hpp  skin_base.hpp  skin_callbacks.hpp  skin_driver.hpp  skin_hooks.hpp  skin_module.hpp  skin_patch.hpp  skin_reader.hpp  skin_sensor.hpp  skin_sensor_type.hpp  skin_sensor_types.hpp  skin_types.hpp  skin_user.hpp  skin_writer.hpp
skin++/src/: Makefile.am  hooks.cpp  iterators.cpp  objects.cpp  skin.cpp
skin/include/: Makefile.am  skin.h  skin_base.h  skin_callbacks.h  skin_driver.h  skin_hooks.h  skin_module.h  skin_patch.h  skin_reader.h  skin_sensor.h  skin_sensor_type.h  skin_sensor_types.h  skin_types.h  skin_user.h  skin_writer.h
skin/src/: Kbuild.in  Makefile.am  base.c  data_internal.h  driver.c  driver_internal.h  hooks.c  inline.c  internal.c  internal.h  iterators.c  kern_main.c  load.c  module.c  names.c  names.h  patch.c  reader.c  reader_internal.h  sensor.c  sensor_types.c  service_provider.c  service_user.c  tools.c  user.c  user_internal.h  writer.c  writer_internal.h
templates/: finalize-devices  init-driver  rosskin_config.cmake  rosskin_extra.cmake  skin-config  skin-config_bash_completion  skin_config.h  skin_version.h  skink_config.h  skink_version.h
tools/: Makefile.am
tools/info/: .gitignore  Kbuild.in  Makefile.am  main.c
user-side-lib/: ChangeLog  Makefile  build.txt  skin.h  skin_callbacks.h  skin_common.h  skin_compiler.h  skin_internal.h  skin_iterators.cpp  skin_kernel.h  skin_log.c  skin_log.h  skin_module.c  skin_module.h  skin_object.c  skin_object.h  skin_patch.c  skin_patch.h  skin_reader.c  skin_reader.h  skin_region.c  skin_region.h  skin_rt.h  skin_sensor.c  skin_sensor.h  skin_sensor_type.c  skin_sensor_type.h  skin_services.c  skin_services.h  skin_services_internal.h  skin_sub_region.c  skin_sub_region.h  tasks
user-side-lib/rosskin/rosskin/: CMakeLists.txt  mainpage.dox  manifest.xml
user-side-lib/rosskin/rosskin/include/: rosskin.h
user-side-lib/rosskin/rosskin/msg/: Data.msg
user-side-lib/rosskin/rosskin/src/: server.cpp  user.cpp
user-side-lib/rosskin/rosskin/srv/: Command.srv  Init.srv  Read.srv
user-side-lib/rosskin/rosskin/test/: periodic.cpp  sporadic.cpp
(+96 files in other folders)
