ACLOCAL_AMFLAGS = -I m4

include_HEADERS = \
                  skin.hpp \
                  skin_base.hpp \
                  skin_callbacks.hpp \
                  skin_driver.hpp \
                  skin_hooks.hpp \
                  skin_module.hpp \
                  skin_patch.hpp \
                  skin_reader.hpp \
                  skin_sensor.hpp \
                  skin_sensor_type.hpp \
                  skin_sensor_types.hpp \
                  skin_types.hpp \
                  skin_user.hpp \
                  skin_writer.hpp
