ACLOCAL_AMFLAGS = -I m4

include_HEADERS = \
                  skin.h \
                  skin_base.h \
                  skin_callbacks.h \
                  skin_driver.h \
                  skin_hooks.h \
                  skin_module.h \
                  skin_patch.h \
                  skin_reader.h \
                  skin_sensor.h \
                  skin_sensor_type.h \
                  skin_sensor_types.h \
                  skin_types.h \
                  skin_user.h \
                  skin_writer.h
