ACLOCAL_AMFLAGS = -I m4

noinst_LTLIBRARIES = libNgin.la
libNgin_la_SOURCES = \
                     Ngin.cpp \
                     Ngin_frustum.cpp \
                     Ngin_light.cpp \
                     Ngin_object.cpp \
                     Ngin_primitives.cpp \
                     Ngin_texture.cpp \
                     shLoad3ds.cpp \
                     Ngin.h \
                     Ngin_base.h \
                     Ngin_frustum.h \
                     Ngin_light.h \
                     Ngin_object.h \
                     Ngin_opengl.h \
                     Ngin_primitives.h \
                     Ngin_texture.h \
                     shLoad3ds.h \
                     shmacros.h
libNgin_la_CXXFLAGS = -Wall -g -I"$(srcdir)/../shImage"
