ACLOCAL_AMFLAGS = -I m4

noinst_LTLIBRARIES = libNgin3d.la
libNgin3d_la_SOURCES = \
                       Ngin3d.cpp \
                       Ngin3d_actions.cpp \
                       Ngin3d_input.cpp \
                       Ngin3d_physics.cpp \
                       Ngin3d.h \
                       Ngin3d_actions.h \
                       Ngin3d_base.h \
                       Ngin3d_input.h \
                       Ngin3d_internal.h \
                       Ngin3d_keydef.h \
                       Ngin3d_physics.h \
                       shmacros.h \
libNgin3d_la_CXXFLAGS = -Wall -g
